--- a/index.html
+++ b/index.html
@@ -1,34 +1,94 @@
-<h1>Welcome to RealTimeDiary!</h1>
-<p>RealTime is Diary is where Anyone can write their 
-personal diaries, and view other's entries in real time! 
-These diaries can be used for whatever you need!Status updates
-on your life, personal opinions and rants, or even 
-Dear Diary entries! This diary is whatever <strong>you</strong> want to make it! </p>
+<head>
+    <style>
+        body {
+            color: #000080;
+            margin: 0px;
+        }
+
+        h1 {
+            background-color: darkblue;
+            color: white;
+        }
+
+        thead {
+            background-color: darkblue;
+            color: white;
+            text-align: center;
+        }
+
+        p {
+            text-align: justify;
+            white-space: normal;
+        }
+
+        table,
+        td {
+            border: 1px solid black;
+        }
+
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        div{
+            margin: 8px;
+            display: inline-block;
+            white-space: nowrap;
+        }
+        .half{
+            width: 50%;
+            margin: 0px;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Welcome to RealTimeDiary!</h1>
+    <div>
+        <p>RealTime is Diary is where Anyone can write their
+            personal diaries, and view other's entries in real time!
+            These diaries can be used for whatever you need!Status updates
+            on your life, personal opinions and rants, or even
+            Dear Diary entries! This diary is whatever <strong>you</strong> want to make it! </p>
 
 
-<table>
-    <thead>
-        <tr>
-            <td><strong>Entry</strong></td>
-            <td><strong>Date</strong></td>
-            <td><strong>User</strong></td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>My first Entry</td>
-            <td>10/20/2019</td>
-            <td>Pearse</td>
-        </tr>
-        <tr>
-            <td>Why are Rabbits so CUTE?!!</td>
-            <td>10/20/2019</td>
-            <td>Laura</td>
-        </tr>
-        <tr>
-            <td>Pokemon is the best game, a dissertation</td>
-            <td>10/21/2019</td>
-            <td>Garrett</td>
-        </tr>
-    </tbody>
-</table>
+        <table>
+            <thead>
+                <tr>
+                    <td><strong>Entry</strong></td>
+                    <td><strong>Date</strong></td>
+                    <td><strong>User</strong></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>My first Entry</td>
+                    <td>10/20/2019</td>
+                    <td>Pearse</td>
+                </tr>
+                <tr>
+                    <td>Why are Rabbits so CUTE?!!</td>
+                    <td>10/20/2019</td>
+                    <td>Laura</td>
+                </tr>
+                <tr>
+                    <td>Pokemon is the best game, a dissertation</td>
+                    <td>10/21/2019</td>
+                    <td>Garrett</td>
+                </tr>
+            </tbody>
+        </table>
+        <div class = "half">
+           <h3>Top Three Entries</h3>
+           <p>1. Why are Rabbits So Cute!</p>
+           <p>2. 12 Ways to write CSS</p>
+           <p>3. You wont believe what happens next!</p>
+        </div>
+        <div class = "half">
+            <h3> Top Three Users!</h3>
+            <p>1. Laura</p>
+            <p>2. Garrett</p>
+            <p>3. Pearse</p>
+        </div>
+    <div>
+</body>
